--- a/index.html
+++ b/index.html
@@ -27,13 +27,23 @@
 
     <div id="content-wrapper">
       <div class="inner clearfix">
-        <section id="main-content">
-          <h3>
+        <section id="main-content"> <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to JOBMA Documentation.</h3>
 <p>This documentation is for giving an introduction about what is JOBMA, explaining the features of JOBMA and how JOBMA can be effectively used for finding the right job or finding the right candidate
         </section>
 
         <aside id="sidebar">
+          <a href="https://github.com/rijojoy/jobmadoc/zipball/gh-pages" class="button">
+            <small>Download</small>
+            .zip file
+          </a>
+          <a href="https://github.com/rijojoy/jobmadoc/tarball/gh-pages" class="button">
+            <small>Download</small>
+            .tar.gz file
+          </a>
+
+          <p class="repo-owner"><a href="https://github.com/rijojoy/jobmadoc"></a> is maintained by <a href="https://github.com/rijojoy">rijojoy</a>.</p>
+
         </aside>
       </div>
     </div>
