Added landing page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,50 @@
         <section id="main-content"> <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to JOBMA Documentation.</h3>
 <p>This documentation is for giving an introduction about what is JOBMA, explaining the features of JOBMA and how JOBMA can be effectively used for finding the right job or finding the right candidate
-        </section>
+</p>
+<p> Following are the different sections of JOBMA </p>
+
+<ol style="margin-left:100px;">
+<li> <a href="landingpages.html"> Landing Pages </a></li>
+<li> <a href="jobseeker.html"> Jobseeker Section </a> </li>
+<li> <a href="employer.html"> Employer Section </a> </li>
+<li> <a href="administration.html"> Administrator Section </a> </li>
+</ol>
+
+<h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 1). Landing Pages</h3>
+<p>
+ These are the generic sections of JOBMA and the access to these sections are not required login to the website. Basically these pages are being used for giving an introduction about JOBMA, explaining various features in JOBMA, showcasing the JOBMA clients and other generic site informations like how to contact for media enquiries, business enquiries etc.To read more about this <a href="landingpages.html">click here</a>.
+</p>
+
+<h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 2). Jobseeker Section</h3>
+<p>
+ These are the generic sections of JOBMA and the access to these sections are not required login to the website. Basically these pages are being used for giving an introduction about JOBMA, explaining various features in JOBMA, showcasing the JOBMA clients and other generic site informations like how to contact for media enquiries, business enquiries etc.To read more about this <a href="jobseeker.html">click here</a>.
+</p>
+
+<h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 3). Employer Section</h3>
+<p>
+ These are the generic sections of JOBMA and the access to these sections are not required login to the website. Basically these pages are being used for giving an introduction about JOBMA, explaining various features in JOBMA, showcasing the JOBMA clients and other generic site informations like how to contact for media enquiries, business enquiries etc.To read more about this <a href="employer.html">click here</a>.
+</p>
+
+<h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> 4). Administrator Section</h3>
+<p>
+ These are the generic sections of JOBMA and the access to these sections are not required login to the website. Basically these pages are being used for giving an introduction about JOBMA, explaining various features in JOBMA, showcasing the JOBMA clients and other generic site informations like how to contact for media enquiries, business enquiries etc.To read more about this <a href="administration.html">click here</a>.
+</p>
+</section>
 
         <aside id="sidebar">
+		<ul>
+<li> <a href="landingpages.html"> Landing Pages </a></li>
+<li> <a href="jobseeker.html"> Jobseeker Section </a> </li>
+<li> <a href="employer.html"> Employer Section </a> </li>
+<li> <a href="administration.html"> Administrator Section </a> </li>
+</ul>
+
+
           <a href="https://github.com/rijojoy/jobmadoc/zipball/gh-pages" class="button">
             <small>Download</small>
             .zip file
