--- a/landingpages.html
+++ b/landingpages.html
@@ -29,15 +29,17 @@
       <div class="inner clearfix">
         <section id="main-content"> <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Landing Pages</h3>
-<p>This documentation is for giving an introduction about what is JOBMA, explaining the features of JOBMA and how JOBMA can be effectively used for finding the right job or finding the right candidate
-</p>
-<p> Following are the different sections of JOBMA </p>
-<ul>
-<li> <a href="landingpages.html"> Landing Pages </a></li>
-<li> <a href="jobseeker.html"> Jobseeker Section </a> </li>
-<li> <a href="employer.html"> Employer Section </a> </li>
-<li> <a href="administration.html"> Administrator Section </a> </li>
-</ul>
+<h4 style="margin-left:50px;">1. Home Page </h4>
+<p> This page is pretty self explanatory. Please see the below figure(s) for understanding the home page. </p>
+Figure 1.
+<img src="images/landingpage/part1.jpg" /><br />
+Figure 2.
+<img src="images/landingpage/part2.jpg" /><br />
+Figure 3.
+<img src="images/landingpage/part3.jpg" /><br />
+Figure 4.
+<img src="images/landingpage/part4.jpg" /><br />
+
         </section>
 
         <aside id="sidebar">
