Added JOBMA Logo

--- a/landingpages.html
+++ b/landingpages.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Jobmadoc</h1>
         <h2>video resumes and video interviews</h2>
-        <a href="https://github.com/rijojoy/jobmadoc" class="button"><small>View project on</small> GitHub</a>
+        <a href="http://www.jobma.com/" class="button" target="_blank"><img src="http://www.jobma.com/images/home-logo.png" width="163" height="42"></a>
       </div>
     </header>
 
@@ -39,11 +39,43 @@ Figure 3.
 <img src="images/landingpage/part3.jpg" /><br />
 Figure 4.
 <img src="images/landingpage/part4.jpg" /><br />
+<h4 style="margin-left:50px;">2. Login Page </h4>
+<p> There are two ways a jobseeker / employer can login to the website <br/>
+    i) By Entering the user name and password <br />
+	ii) By using the social login( Facebook/LinkedIn/GooglePlus )
+       
+ </p>
+ Figure 1.
+ <img src="images/landingpage/login.jpg" /><br />
+ <h4 style="margin-left:50px;">3. How Jobma Works </h4>
+ <p> This is a static page </p>
+ 
+ <h4 style="margin-left:50px;">4. Why Jobma </h4>
+ <p> This is a static page </p>
+ 
+ <h4 style="margin-left:50px;">5. Employer </h4>
+ <p> This is Employer landing page, where an employer can create their account(JOBMA admin will decide whether to approve / disapprove the account). Please see the below figure(s) to understand this page better.</p>
+ Figure 1.
+<img src="images/landingpage/part1_employer.jpg" /><br />
 
+<h4 style="margin-left:50px;">6. Employer Signup Page - http://www.jobma.com/esignup.php </h4>
+ <p> This is Employer Signup page where employer can enter their details and can request for an account creation.</p>
+ Figure 1.
+<img src="images/landingpage/esignup1.jpg" /><br />
+Figure 2.
+<img src="images/landingpage/esignup2.jpg" /><br />
+<h4 style="margin-left:50px;">7. Resources </h4>
+ <p> This is a static page </p>
+ <h4 style="margin-left:50px;">8. Jobma Blog </h4>
+ <p> This is an external link to jobma blog -  http://blog.jobma.com/</p>
+
+ <h4 style="margin-left:50px;">9. Contact </h4>
+ <p> This is a static page with all contact details listed</p>
         </section>
 
         <aside id="sidebar">
 		<ul>
+<li> <a href="index.html"> Home Page </a></li>
 <li> <a href="landingpages.html"> Landing Pages </a></li>
 <li> <a href="jobseeker.html"> Jobseeker Section </a> </li>
 <li> <a href="employer.html"> Employer Section </a> </li>
