--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Jobmadoc</h1>
         <h2>video resumes and video interviews</h2>
-        <a href="https://github.com/rijojoy/jobmadoc" class="button"><small>View project on</small> GitHub</a>
+         <a href="http://www.jobma.com/" class="button" target="_blank"><img src="http://www.jobma.com/images/home-logo.png" width="163" height="42"></a>
       </div>
     </header>
 
@@ -67,6 +67,7 @@
 
         <aside id="sidebar">
 		<ul>
+<li> <a href="index.html"> Home Page </a></li>
 <li> <a href="landingpages.html"> Landing Pages </a></li>
 <li> <a href="jobseeker.html"> Jobseeker Section </a> </li>
 <li> <a href="employer.html"> Employer Section </a> </li>
